--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3.1'
 
 services: 
-  kanban_task_pg:
+  tabulador_pg:
     image: postgres:15.1
-    container_name: kanban_task_pg
+    container_name: tabulador_pg
     restart: always
     environment:
-      POSTGRES_DB: 'kanban_task_pg'
+      POSTGRES_DB: 'tabulador_pg'
       POSTGRES_USER: 'udaniklean'
       POSTGRES_PASSWORD: 'secretDaniklean'
     volumes:
