--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,13 @@ DB_PASSWORD=secretDaniklean
 
 HASH_SALT=10
 JWT_SECRET=daniklean@kanban.com
+
+
+# Email Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=mcljs15@gmail.com
+SMTP_PASS=ndcnvjmwprwlueuy
+EMAIL_FROM=mcljs15@gmail.com
+EMAIL_FROM_NAME=Sistema de Envíos
