--- a/package.json
+++ b/package.json
@@ -32,13 +32,18 @@
     "@nestjs/config": "2.2.0",
     "@nestjs/core": "9.0.0",
     "@nestjs/platform-express": "9.0.0",
+    "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "7.1.8",
     "@nestjs/typeorm": "10.0.0",
+    "@types/nodemailer": "^6.4.17",
     "bcrypt": "5.1.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.1",
+    "nodemailer": "^7.0.3",
     "pg": "8.11.1",
+    "postmark": "^4.0.5",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.2.0",
@@ -70,7 +75,10 @@
     "ts-loader": "9.2.3",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.0",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "webpack": "^5.99.9",
+    "webpack-cli": "^6.0.1",
+    "webpack-node-externals": "^3.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
