--- a/.env.development
+++ b/.env.development
@@ -15,6 +15,6 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=mcljs15@gmail.com
-SMTP_PASS=ndcnvjmwprwlueuy
+SMTP_PASS=
 EMAIL_FROM=mcljs15@gmail.com
 EMAIL_FROM_NAME=Sistema de Envíos
